--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "fetch": "ts-node src/index.ts",
     "fetch:watch": "ts-node --watch src/index.ts"
   },
-  "keywords": ["nodejs", "typescript", "estat", "data-fetcher"],
+  "keywords": [
+    "nodejs",
+    "typescript",
+    "estat",
+    "data-fetcher"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -18,6 +23,7 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "dotenv": "^17.2.3"
   }
-} 
+}
